--- a/.env.template
+++ b/.env.template
@@ -6,4 +6,5 @@ PORT=3000
 # ORDERS_MICROSERVICE_HOST=localhost
 # ORDERS_MICROSERVICE_PORT=3002
 
+# NATS_SERVERS="nats://localhost:4222,nats://localhost:4223"
 NATS_SERVERS="nats://localhost:4222"
